# airbnb_features

./: .gitignore  Criação de Features.py  README.md  TUTORIAL.md  pyproject.toml
.databricks/: profile.json
notebooks/: explore_listings.ipynb
src/airbnb_features/common/: spark_session.py
src/airbnb_features/features/: host_features.py
src/airbnb_features/landing/: ingest_listings.py
src/airbnb_features/utils/: feature_store.py
tests/: test_host_features.py  test_listing_features.py
